test/libsolidity/syntaxTests/contractBaseLocation/duplicated_layout_definition.sol
contract C layout at 0x1234 is A, B layout at 0xABC { }
// ----
// ParserError 8714: (36-42): Storage base location was already defined previously.
